==============
lxml changelog
==============

Under development
=================

Features added
--------------

* ``lxml.html.rewrite_links()`` strips links to work around documents
  with whitespace in URL attributes.

Bugs fixed
----------

* CSS selector parser dropped remaining expression after a function
  with parameters.

Other changes
-------------


2.0.7 (2008-06-20)
==================

Features added
--------------

* Pickling ``ElementTree`` objects in lxml.objectify.

Bugs fixed
----------

* Descending dot-separated classes in CSS selectors were not resolved
  correctly.

* ``ElementTree.parse()`` didn't handle target parser result.

* Potential threading problem in XInclude.

* Crash in Element class lookup classes when the __init__() method of
  the super class is not called from Python subclasses.

Other changes
-------------

* Non-ASCII characters in attribute values are no longer escaped on
  serialisation.


2.0.6 (2008-05-31)
==================

Features added
--------------

Bugs fixed
----------

* Incorrect evaluation of ``el.find("tag[child]")``.

* Windows build was broken.

* Moving a subtree from a document created in one thread into a
  document of another thread could crash when the rest of the source
  document is deleted while the subtree is still in use.

* Rare crash when serialising to a file object with certain encodings.

Other changes
-------------

* lxml should now build without problems on MacOS-X.


2.0.5 (2008-05-01)
==================

Features added
--------------

Bugs fixed
----------

* Resolving to a filename in custom resolvers didn't work.

* lxml did not honour libxslt's second error state "STOPPED", which
  let some XSLT errors pass silently.

* Memory leak in Schematron with libxml2 >= 2.6.31.

Other changes
-------------


2.0.4 (2008-04-13)
==================

Features added
--------------

Bugs fixed
----------

* Hanging thread in conjunction with GTK threading.
